# MeshDevGUI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
dataset/: scan25_cpu.mtl
demo/: CMakeLists.txt  MeshDevGUIDemo.cpp  demo.cpp
include/: OptiX_Base.cpp
include/geometry/: GeometryDeviationDevice.cu  GeometryDeviationHost.cpp  Object_t.cpp
libs/: CMakeLists.txt  OptiX_Base.h
libs/Renderer/: CMakeLists.txt
libs/Renderer/GLSLRenderer/: SimpleRenderer.h
libs/Visualizer/: Application.h  CMakeLists.txt  README.md  Stage.h
libs/Visualizer/UI/: Components.h  FileDialog.cpp  FileDialog.h
libs/geometry/: CMakeLists.txt  GeometryDeviation.h  Object_t.h  TriangleMesh.h  quaternion.h
